--- a/src/Brainf_ckSharp.UWP/Styles/TemplatedControlsStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/TemplatedControlsStyles.xaml
@@ -1,7 +1,90 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:header="using:Brainf_ckSharp.UWP.Controls.Header">
+    xmlns:header="using:Brainf_ckSharp.UWP.Controls.Header"
+    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Telerik.UI.Controls">
+
+    <!--Expander control-->
+    <Style TargetType="controls:ExpanderControl">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:ExpanderControl">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!--Visual states-->
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup>
+                                <VisualState x:Name="Collapsed">
+                                    <Storyboard AllowDependentAnimations="True">
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="ExpandablePresenter"
+                                            Storyboard.TargetProperty="Height"
+                                            To="0"
+                                            Duration="0:0:0.6"/>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="IconTransform"
+                                            Storyboard.TargetProperty="Angle"
+                                            To="0"
+                                            Duration="0:0:0.6"/>
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Expanded">
+                                    <Storyboard AllowDependentAnimations="True">
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="ExpandablePresenter"
+                                            Storyboard.TargetProperty="Height"
+                                            To="{TemplateBinding ExpandableContentHeight}"
+                                            Duration="0:0:0.6"/>
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="IconTransform"
+                                            Storyboard.TargetProperty="Angle"
+                                            To="180"
+                                            Duration="0:0:0.6"/>
+                                    </Storyboard>
+                                </VisualState>
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+
+                        <!-- Header content-->
+                        <ContentPresenter Content="{TemplateBinding Header}"/>
+
+                        <!--Expander button-->
+                        <Button
+                            x:Name="ExpanderButton"
+                            Grid.Row="0"
+                            Grid.Column="1">
+                            <TextBlock
+                                Text="{StaticResource ExpanderDownArrowIcon}"
+                                FontFamily="Segoe MDL2 Assets"
+                                FontSize="16"
+                                HorizontalAlignment="Center"
+                                RenderTransformOrigin="0.5, 0.5">
+                                <TextBlock.RenderTransform>
+                                    <RotateTransform x:Name="IconTransform"/>
+                                </TextBlock.RenderTransform>
+                            </TextBlock>
+                        </Button>
+
+                        <!--Expandable content-->
+                        <ContentPresenter
+                            x:Name="ExpandablePresenter"
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2"
+                            Content="{TemplateBinding ExpandableContent}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <!--Header button-->
     <Style TargetType="header:HeaderButton">
