--- a/src/Brainf_ckSharp.UWP/Styles/TemplatedControlsStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/TemplatedControlsStyles.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:header="using:Brainf_ckSharp.UWP.Controls.Header"
-    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Telerik.UI.Controls">
+    xmlns:controls="using:Brainf_ckSharp.UWP.Controls.Telerik.UI.Controls"
+    xmlns:virtualKeyboard="using:Brainf_ckSharp.UWP.Controls.InputPanel.VirtualKeyboard">
 
     <!--Expander control-->
     <Style TargetType="controls:ExpanderControl">
@@ -184,7 +185,52 @@
                             <TextBlock
                                 x:Name="TitleBlock"
                                 Text="{TemplateBinding Text}"
-                                RelativePanel.Below="IconBlock"
+                                HorizontalAlignment="Center"
+                                MaxLines="1"
+                                TextWrapping="NoWrap"
+                                TextTrimming="CharacterEllipsis"
+                                FontSize="12"
+                                Foreground="#E0FFFFFF"/>
+                        </StackPanel>
+                    </Button>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--Operator button-->
+    <Style TargetType="virtualKeyboard:OperatorButton">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="virtualKeyboard:OperatorButton">
+                    <Button x:Name="RootButton">
+
+                        <!--Tweaks to the default style-->
+                        <Button.Resources>
+                            <Style TargetType="Button" BasedOn="{StaticResource ButtonRevealStyle}">
+                                <Setter Property="CornerRadius" Value="0"/>
+                                <Setter Property="Margin" Value="0"/>
+                                <Setter Property="Padding" Value="0"/>
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="VerticalAlignment" Value="Stretch"/>
+                                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                            </Style>
+                        </Button.Resources>
+
+                        <!--Icon and title-->
+                        <StackPanel
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Spacing="4">
+                            <TextBlock
+                                x:Name="OperatorBlock"
+                                Text="{TemplateBinding Operator}"
+                                HorizontalAlignment="Center"/>
+                            <TextBlock
+                                x:Name="DescriptionBlock"
+                                Text="{TemplateBinding Description}"
                                 HorizontalAlignment="Center"
                                 MaxLines="1"
                                 TextWrapping="NoWrap"
