--- a/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
+++ b/src/Brainf_ckSharp.UWP/Resources/Dictionaries/Brushes.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:brushes="using:UICompositionAnimations.Brushes">
 
     <!--Shell header background brush-->
     <AcrylicBrush
@@ -9,12 +10,14 @@
         TintColor="#FF1E1E1E"
         TintOpacity="0.6"/>
 
-    <!--Virtual keyboard background-->
-    <AcrylicBrush
-        x:Name="VirtualKeyboardBackgroundBrush"
-        BackgroundSource="HostBackdrop"
-        TintColor="#FF101010"
-        TintOpacity="0.9"/>
+    <!--Virtual keyboard brush-->
+    <brushes:AcrylicBrush
+        x:Key="VirtualKeyboardBackgroundBrush"
+        Source="HostBackdrop"
+        FallbackColor="#FF141414"
+        Tint="#FF101010"
+        TintMix="0.9"
+        TextureUri="/Assets/Misc/noise_low.png"/>
 
     <!--Backgorund info bar brush-->
     <SolidColorBrush x:Key="BackgroundInfoBrush" Color="#FF007ACC"/>
