--- a/src/Brainf_ckSharp.UWP/App.xaml
+++ b/src/Brainf_ckSharp.UWP/App.xaml
@@ -12,7 +12,8 @@
                 <ResourceDictionary Source="Resources/Dictionaries/Brushes.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/MDL2Icons.xaml"/>
                 <ResourceDictionary Source="Resources/Dictionaries/Operators.xaml"/>
-                <ResourceDictionary Source="Styles/TemplatedControlsStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ButtonsStyles.xaml"/>
+                <ResourceDictionary Source="Styles/TelerikStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
