--- a/src/Brainf_ckSharp.UWP/Styles/TelerikStyles.xaml
+++ b/src/Brainf_ckSharp.UWP/Styles/TelerikStyles.xaml
@@ -34,9 +34,20 @@
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
                                         <DoubleAnimation
+                                            Storyboard.TargetName="ExpandablePresenter"
+                                            Storyboard.TargetProperty="Opacity"
+                                            From="1"
+                                            To="0"
+                                            Duration="0:0:0.15">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"/>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation
                                             Storyboard.TargetName="IconTransform"
                                             Storyboard.TargetProperty="Angle"
-                                            To="0"
+                                            From="0"
+                                            To="180"
                                             Duration="0:0:0.25"/>
                                     </Storyboard>
                                 </VisualState>
@@ -53,9 +64,20 @@
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
                                         <DoubleAnimation
+                                            Storyboard.TargetName="ExpandablePresenter"
+                                            Storyboard.TargetProperty="Opacity"
+                                            From="0"
+                                            To="1"
+                                            Duration="0:0:0.15">
+                                            <DoubleAnimation.EasingFunction>
+                                                <CircleEase EasingMode="EaseOut"/>
+                                            </DoubleAnimation.EasingFunction>
+                                        </DoubleAnimation>
+                                        <DoubleAnimation
                                             Storyboard.TargetName="IconTransform"
                                             Storyboard.TargetProperty="Angle"
-                                            To="-180"
+                                            From="180"
+                                            To="0"
                                             Duration="0:0:0.25"/>
                                     </Storyboard>
                                 </VisualState>
@@ -91,13 +113,13 @@
 
                             <!--Expander icon-->
                             <TextBlock
-                                Text="{StaticResource ExpanderDownArrowIcon}"
+                                Text="{StaticResource ExpandeUpArrowIcon}"
                                 FontFamily="Segoe MDL2 Assets"
                                 FontSize="16"
                                 HorizontalAlignment="Center"
                                 RenderTransformOrigin="0.5, 0.5">
                                 <TextBlock.RenderTransform>
-                                    <RotateTransform x:Name="IconTransform"/>
+                                    <RotateTransform x:Name="IconTransform" Angle="0"/>
                                 </TextBlock.RenderTransform>
                             </TextBlock>
                         </Button>
